[tool.poetry]
name = "analysis-example-autoscaling-profiles-limits-py"
version = "0.1.0"
description = ""
authors = ["Mateus Cardoso <mateus.informatica44@gmail.com>"]
readme = "README.md"
packages = [{include = "analysis_example_autoscaling_profiles_limits_py"}]

[tool.poetry.dependencies]
python = "^3.10"
tagoio-sdk = "^4.0.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s"
